--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     const userResultsDiv = document.getElementById('userResults');
 
     searchButton.addEventListener('click', async () => {
-      const response = await fetch(`http://azhar.ddns.net:5000/mpthree?search=${document.getElementById('searchInput').value}&limit=5`);
+      const response = await fetch(`https://azhar.ddns.net:5000/mpthree?search=${document.getElementById('searchInput').value}&limit=5`);
       const data = await response.json();
 
       const users = data;
@@ -108,7 +108,7 @@
 
         const userBox = document.createElement('div');
         userBox.className = 'user-box';
-        userBox.innerHTML = `<a href=${'http://azhar.ddns.net:5000/mpthree?download='.concat(firstName)}><h3>${lastName}</h3></a>`;
+        userBox.innerHTML = `<a href=${'https://azhar.ddns.net:5000/mpthree?download='.concat(firstName)}><h3>${lastName}</h3></a>`;
         userResultsDiv.appendChild(userBox);
       }
     });
